# ak_lab4

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  hello  rules.ninja
